# log-fit

./: .gitignore  README.md  pyproject.toml
configs/: bgl_10s.yaml  bgl_30s.yaml  bgl_30s_fold3_safe.yaml  bgl_60s.yaml  hdfs.yaml  hdfs_deviation.yaml  tbird_10s.yaml  tbird_30s.yaml  tbird_60s.yaml
docs/: Logfit-repro-decisions-v1.2.md  Logfit-repro-spec-v1.2.md  README.md  logfit-gemini-v14-token-length-validation.md  logfit-repro-decisions-v1.3.md  logfit-repro-decisions-v1.4.md  logfit-repro-decisions-v1.5.md  logfit-repro-spec-v1.3.md
scripts/: anomaly_temporal_distribution.py  diagnose_distribution.py  score.sh  train.sh
src/: __init__.py  dataset.py  evaluate.py  mask.py  prepare_bgl_tbird.py  prepare_hdfs.py  score.py  select_backbone.py  splits.py  subsample_paragraphs.py  token_length_gate.py  train.py  tune_threshold.py  types.py  variability_bgl.py
src/utils/: __init__.py  io.py  seed.py  stats.py
tests/: __init__.py  test_configs.py  test_dataset.py  test_evaluate.py  test_mask.py  test_prepare_bgl_tbird.py  test_prepare_hdfs.py  test_score.py  test_seed.py  test_select_backbone.py  test_splits.py  test_subsample_paragraphs.py  test_token_length_gate.py  test_train.py  test_tune_threshold.py  test_variability_bgl.py
